# MADS

./: .gitattributes  .gitignore  LICENSE  README.md  dev_testing.py  pyproject.toml  requirements.txt
backend/: agent_manager.py  chat_manager.py  config.py  files_manipulation.py
chat_history/: chat_Airline_customer_satisfaction.txt  chat_CrabAgePrediction.txt  chat_Electric_Production.txt  chat_FuelConsumption.txt  chat_Hourly_Gasoline_Prices.txt  chat_Microsoft_Stock.txt  chat_Obesity Classification.txt  chat_Student_Performance.txt  chat_Thyroid_Diff.txt  chat_cars.txt  chat_dataset_2190_cholesterol.txt  chat_day.txt  chat_diagnosed_cbc_data_v4.txt  chat_employee_attrition.txt  chat_medical_insurance.txt  chat_monthly-beer-production.txt  chat_mushrooms.txt  chat_pjme.txt  chat_predictive-maintenance-dataset.txt  chat_report_2018-2019.txt  chat_sales-of-shampoo-over-a-three-ye.txt  chat_telco.txt  chat_winequality-red.txt  chat_winequality-white.txt
src/mads/: agent_manager.py  chat_manager.py  config.py
tasks/datasets/: FuelConsumption.csv  POP.csv  cars.csv  daily-minimum-temperatures-in-me.csv  diagnosed_cbc_data_v4.csv  medical_insurance.csv  pjme.csv  predictive_maintenance.csv  sales-of-shampoo-over-a-three-ye.csv  telco.csv
tasks/generated_files/: pred_AirPassengers.csv  pred_Airline_customer_satisfaction.csv  pred_CrabAgePrediction.csv  pred_Electric_Production.csv  pred_FuelConsumption.csv  pred_Microsoft_Stock.csv  pred_Obesity Classification.csv  pred_Student_Performance.csv  pred_Thyroid_Diff.csv  pred_cars.csv  pred_dataset_2190_cholesterol.csv  pred_day.csv  pred_pjme.csv  (+31 more)
tests/: test_agent_manager.py  test_configs.py
