[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymads"
version = "0.0.2"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.4.0",
    "certifi>=2024.6.2",
    "charset-normalizer>=3.3.2",
    "colorama>=0.4.6",
    "diskcache>=5.6.3",
    "distro>=1.9.0",
    "docker>=7.1.0",
    "FLAML>=2.1.2",
    "h11>=0.14.0",
    "httpcore>=1.0.5",
    "httpx>=0.27.0",
    "idna>=3.7",
    "numpy>=1.26.4",
    "openai>=1.31.0",
    "packaging>=24.0",
    "pandas>=2.2.2",
    "pyautogen>=0.2.28",
    "pydantic>=2.7.3",
    "pydantic_core>=2.18.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.1",
    "pywin32>=306",
    "regex>=2024.5.15",
    "requests>=2.32.3",
    "six>=1.16.0",
    "sniffio>=1.3.1",
    "termcolor>=2.4.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.4",
    "typing_extensions>=4.12.1",
    "tzdata>=2024.1",
    "urllib3>=2.2.1"
]
authors = [
  { name="Diogo Pedrosa", email="diogofranciscop@hotmail.com"},
  { name="Iago Gaspar", email="wutsuperwut@gmail.com" },
  
]
description = "A framework that uses multi-agents to enable users to perform a systematic data science pipeline with just two inputs."
readme = "README.md"
requires-python = ">=3.11.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AiFlowSolutions/MADS"
Issues = "https://github.com/AiFlowSolutions/MADS/issues"

